assets/css/style.css
/* ... */
.grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
}
.flex-col {
    flex-direction: column;
}
.content-center {
    align-content: center;
}
.justify-center {
    justify-content: center;
}
.justify-between {
    justify-content: space-between;
}
.gap-12 {
    gap: 3rem;
}
.gap-16 {
    gap: 4rem;
}
.gap-6 {
    gap: 1.5rem;
}
.divide-x > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-x-reverse: 0;
    border-right-width: calc(1px * var(--tw-divide-x-reverse));
    border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
}
.divide-y > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-y-reverse: 0;
    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
}
.divide-featured > :not([hidden]) ~ :not([hidden]) {
    border-color: var(--featured-color);
}
.self-start {
    align-self: flex-start;
}
.self-end {
    align-self: flex-end;
}
.self-center {
    align-self: center;
}
.overflow-x-auto {
    overflow-x: auto;
}
.border {
    border-width: 1px;
}
.border-y {
    border-top-width: 1px;
    border-bottom-width: 1px;
}
.border-b {
    border-bottom-width: 1px;
}
.border-base {
    border-color: var(--base-color);
}
.border-black {
    --tw-border-opacity: 1;
    border-color: rgb(0 0 0 / var(--tw-border-opacity));
}
.border-featured {
    border-color: var(--featured-color);
}
.bg-base {
    background-color: var(--base-color);
}
.bg-featured {
    background-color: var(--featured-color);
}
.bg-inherit {
    background-color: inherit;
}
.object-cover {
    -o-object-fit: cover;
       object-fit: cover;
}
.object-center {
    -o-object-position: center;
       object-position: center;
}
.object-top {
    -o-object-position: top;
       object-position: top;
}
.p-1 {
    padding: 0.25rem;
}
.p-16 {
    padding: 4rem;
}
.p-2 {
    padding: 0.5rem;
}
.p-24 {
    padding: 6rem;
}
.p-4 {
    padding: 1rem;
}
.p-6 {
    padding: 1.5rem;
}
.p-8 {
    padding: 2rem;
}
.px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}
.px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
}
.py-1 {
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
}
.py-16 {
    padding-top: 4rem;
    padding-bottom: 4rem;
}
.py-2 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}
.py-24 {
    padding-top: 6rem;
    padding-bottom: 6rem;
}
.py-4 {
    padding-top: 1rem;
    padding-bottom: 1rem;
}
.py-6 {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}
.px-16 {
    padding-left: 4rem;
    padding-right: 4rem;
}
.py-28 {
    padding-top: 7rem;
    padding-bottom: 7rem;
}
.pb-2 {
    padding-bottom: 0.5rem;
}
.pb-3 {
    padding-bottom: 0.75rem;
}
.pb-4 {
    padding-bottom: 1rem;
}
.pb-6 {
    padding-bottom: 1.5rem;
}
.pb-8 {
    padding-bottom: 2rem;
}
.pl-2 {
    padding-left: 0.5rem;
}
.pr-10 {
    padding-right: 2.5rem;
}
.pr-12 {
    padding-right: 3rem;
}
.pt-10 {
    padding-top: 2.5rem;
}
.pt-6 {
    padding-top: 1.5rem;
}
.text-center {
    text-align: center;
}
.text-right {
    text-align: right;
}
.text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
}
.text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
}
.text-7xl {
    font-size: 4.5rem;
    line-height: 1;
}
.text-base {
    font-size: 1rem;
    line-height: 1.5rem;
}
.text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
}
.text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
}
.font-semibold {
    font-weight: 600;
}
.uppercase {
    text-transform: uppercase;
}
.tracking-wide {
    letter-spacing: 0.025em;
}
.tracking-widest {
    letter-spacing: 0.1em;
}
.text-base {
    color: var(--base-color);
}
.text-featured {
    color: var(--featured-color);
}
.text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
}
.overline {
    text-decoration-line: overline;
}
.outline-none {
    outline: 2px solid transparent;
    outline-offset: 2px;
}

/* Custom CSS */

/* Typography */
body {
    font-family: "Montserrat", sans-serif;
}

.featured-text { font-family: "Oranienbaum", serif;}
.accent-text { font-family: "Poppins", sans-serif;}

/* Reuseable Group Styles */
.button {
    background-color: var(--featured-color);
    color: var(--base-color);
    text-transform: uppercase;
    font-size: 0.75rem;
    padding: 0.5rem 1.5rem;
    border: 1px solid var(--featured-color);
    transition: all 150ms;
    display: inline-block;
}

.button:hover {
    background-color: var(--accent-color);
    color: var(--featured-color);
}

footer a:hover {
    color: var(--accent-color);
}

.placeholder\:uppercase::-moz-placeholder {
    text-transform: uppercase;
}

.placeholder\:uppercase::placeholder {
    text-transform: uppercase;
}

.placeholder\:text-featured::-moz-placeholder {
    color: var(--featured-color);
}

.placeholder\:text-featured::placeholder {
    color: var(--featured-color);
}

.hover\:bg-accent:hover {
    background-color: var(--accent-color);
}

.focus\:bg-accent:focus {
    background-color: var(--accent-color);
}

.focus\:outline-none:focus {
    outline: 2px solid transparent;
    outline-offset: 2px;
}

@media (min-width: 640px) {
    .sm\:left-\[30vw\] {
        left: 30vw;
    }
    .sm\:w-\[70vw\] {
        width: 70vw;
    }
    .sm\:p-16 {
        padding: 4rem;
    }
    .sm\:px-16 {
        padding-left: 4rem;
        padding-right: 4rem;
    }
}
/* ... */

